Backface culling in Multitexture is on permanently #39306

Closed
opened 2014-03-20 23:47:56 +01:00 by Sanc Tuary · 9 comments

System Information
Operating system and graphics card
xp sp3

Blender Version
Broken: Blender 2.70
Worked: probably none

Short description of error
in Textured display while being set to Multitexture, disabling backface culling in the N-panel do nothing

Exact steps for others to reproduce the error

  • Load the attached blend , it's an unclosed cylinder with a texture, material defined (blender render mode)

backfaceodd04.blend

  • Be sure Blender is set to Blender Render mode , not to Cycle Render.
  • Set the 3D view display to Textured mode.
  • Press N , scroll down to the Shading tab and set it to Multitexture
  • Enable or disable the Backface Culling will not change the fact that in the 3D view the backface culling is enabled constantly

Now change to GLSL and backface culling works, it will hide the back face when enabled and show the backface when disabled.

**System Information** Operating system and graphics card xp sp3 **Blender Version** Broken: Blender 2.70 Worked: probably none **Short description of error** in Textured display while being set to Multitexture, disabling backface culling in the N-panel do nothing **Exact steps for others to reproduce the error** - Load the attached blend , it's an unclosed cylinder with a texture, material defined (blender render mode) [backfaceodd04.blend](https://archive.blender.org/developer/F82004/backfaceodd04.blend) - Be sure Blender is set to Blender Render mode , not to Cycle Render. - Set the 3D view display to Textured mode. - Press N , scroll down to the Shading tab and set it to Multitexture - Enable or disable the Backface Culling will not change the fact that in the 3D view the backface culling is enabled constantly Now change to GLSL and backface culling works, it will hide the back face when enabled and show the backface when disabled.
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @sanctuary

Added subscriber: @sanctuary
Author

just remembered an old bug report about the alpha settings in multitexture not existing in the Material panel of Blender Render, but only existing in the Material panel of Blender Game, and still the BGE material alpha settings having an influence on the Blender Render mode.

And it was that.

  • After testing the steps i mentionned in the bug report, now get back to Multitexture, make sure the Backface culling setting is disabled (even if in the 3D view it's still obviously constantly enabled).

  • Change from Blender Render to Blender Game, and go to the Material panel

  • At the "game setting" tab, notice that (by default) Backface culling is enabled (despite you disabled it in Blender Render).

  • Disable Backface culling from there, and you'll see that now the 3D View behave correctly if you enable/disable the Backface culling setting from the N-panel

Looks like there's some kind of conflict between those 2 different Backface culling setting, with the one in the Blender Game mode that dominate the one in the 3D view.

Oddly that does only happen in Multitexture, in GLSL the one in the 3D View N-Panel dominate as the user would expect

just remembered an old bug report about the alpha settings in multitexture not existing in the Material panel of Blender Render, but only existing in the Material panel of Blender Game, and still the BGE material alpha settings having an influence on the Blender Render mode. And it was that. - After testing the steps i mentionned in the bug report, now get back to Multitexture, make sure the Backface culling setting is disabled (even if in the 3D view it's still obviously constantly enabled). - Change from Blender Render to Blender Game, and go to the Material panel - At the "game setting" tab, notice that (by default) Backface culling is enabled (despite you disabled it in Blender Render). - Disable Backface culling from there, and you'll see that now the 3D View behave correctly if you enable/disable the Backface culling setting from the N-panel Looks like there's some kind of conflict between those 2 different Backface culling setting, with the one in the Blender Game mode that dominate the one in the 3D view. Oddly that does only happen in Multitexture, in GLSL the one in the 3D View N-Panel dominate as the user would expect

Added subscriber: @mont29

Added subscriber: @mont29

Yep, looks like Game setting take precedence on 3DView one, when enabled…

Yep, looks like Game setting take precedence on 3DView one, when enabled…
Bastien Montagne self-assigned this 2014-03-21 09:17:18 +01:00

This issue was referenced by blender/blender-addons-contrib@0f95149a78

This issue was referenced by blender/blender-addons-contrib@0f95149a7849005d7b82004137dd49146a60b8fa

This issue was referenced by 0f95149a78

This issue was referenced by 0f95149a7849005d7b82004137dd49146a60b8fa

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit 0f95149a78.

Closed by commit 0f95149a78.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#39306
No description provided.